# jubilant-octo-system

./: CMakeLists.txt  array.cuh  array.hpp  bvh.cu  bvh.cuh  common.cpp  common.hpp  cuda_macros.hpp  main.cpp  random.hpp  render.cpp  render.cu  render.hpp  small_stack.hpp  vec3.hpp
include/Qx/: array.hpp  bbox.hpp  bvh.hpp  common.hpp  cuda_macros.hpp  hit.hpp  random.hpp  ray.hpp  render.hpp  scalar.hpp  small_stack.hpp  triangle.hpp  vec3.hpp
src/: array.cuh  bvh.cpp  bvh.cu  bvh.cuh  common.cpp  render.cpp  render.cu
